# arch-leaderboard

./: README.md
arch-cli/: .gitignore  Cargo.toml  generate.sh  metadata.json  result.json
arch-cli/arch-client/: Cargo.toml  README.md
arch-cli/arch-client/.openapi-generator/: FILES
arch-cli/arch-client/docs/: ApiKeyDto.md  AuthApi.md  GetTimesResDto.md  GetTimesResDtoTimeDto.md  GetTimesResDtoUserDto.md  HeartbeatApi.md  HttpError.md  LoginDto.md  RecordTimeReqDto.md  SignupDto.md  TimeApi.md  TimeDto.md  TimeDtoUserDto.md  UserApi.md  UserDto.md  ValidationError.md  ValidationErrorDetail.md  ValidationErrorDetailLocation.md
arch-cli/arch-client/src/apis/: auth_api.rs  configuration.rs  heartbeat_api.rs  mod.rs  time_api.rs  user_api.rs
arch-cli/src/: args.rs  json_data.rs  main.rs  time.rs
backend/: .gitignore  pyproject.toml
backend/src/: __init__.py
backend/src/auth/: __init__.py  dto.py  guard.py  jwt.py  router.py  service.py
backend/src/time/: __init__.py  dto.py  model.py  repo.py  router.py  service.py
backend/src/user/: __init__.py  dto.py  model.py  repo.py  router.py  service.py
backend/src/utils/: __init__.py  beat.py  db.py  email.py  otp.py  settings.py
frontend/: index.html  openapi.json  orval.config.ts  package-lock.json  package.json
frontend/src/: account.tsx  app.tsx  home.tsx  login.tsx  main.tsx  otp.tsx  router.tsx  sign-up.tsx  vite-env.d.ts
frontend/src/components/: alert.tsx  empty.tsx  filter-box.tsx  loader.tsx  navbar.tsx  otp-input.tsx  score-table.tsx
frontend/src/utils/: custom-instance.ts  ops.ts
(+36 files in other folders)
